* Fixed datepicker z-index issues with card's translateY animation * Fixed flex gap issue with datepicker fields

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/study-planner.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/study-planner.scss
@@ -385,10 +385,14 @@
   opacity: 1;
   position: relative;
   transition: transform 0.2s ease-in-out;
-}
 
-.study-planner__card:hover {
-  transform: translateY(-2px);
+  &:has(.react-datepicker) {
+    z-index: 9;
+  }
+
+  &:hover {
+    transform: translateY(-2px);
+  }
 }
 
 .study-planner__card--course-tray-card {
